front end rework 1.0

--- a/Sun Tours-Website/FAQ.html
+++ b/Sun Tours-Website/FAQ.html
@@ -11,6 +11,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
   <script src="Javascript/ajax.js"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap" rel="stylesheet"> 
   <style>
     .fakeimg {
       height: 200px;
@@ -53,10 +55,12 @@
       </ul>
     </div>
   </nav>
-
+  <div class="header_faq">
+    <h1>FAQ</h1><br>
+    </div>
   <main>
-    <h7 class="faq">FAQ</h7>
-    <div class="container py-3">
+   
+    <div class="container py-3 faq_height">
       <div class="row">
         <div class="col-10 mx-auto">
           <div class="accordion" id="faqExample">
@@ -66,7 +70,7 @@
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne"
                     aria-expanded="false" aria-controls="collapseOne">
-                    Q: Waarom zou ik Sun Tours gebruiken om een ​​vakantie te boeken?
+                    Waarom zou ik Sun Tours gebruiken om een ​​vakantie te boeken?
                   </button>
                 </h5>
               </div>
@@ -87,7 +91,7 @@
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
                     aria-expanded="false" aria-controls="collapseTwo">
-                    Q: Heb ik een reisverzekering nodig?
+                    Heb ik een reisverzekering nodig?
                   </button>
                 </h5>
               </div>
@@ -114,7 +118,7 @@
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                     data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Q: Hoe annuleer ik een reis?
+                   Hoe annuleer ik een reis?
                   </button>
                 </h5>
               </div>
@@ -135,7 +139,7 @@
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                     data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
-                    Q: Hoe weet ik dat ik deze reisaanbieder kan vertrouwen?
+                    Hoe weet ik dat ik deze reisaanbieder kan vertrouwen?
                   </button>
                 </h5>
               </div>
@@ -160,7 +164,7 @@
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                     data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                    Q: Duurzaam reizen
+                    Duurzaam reizen
                   </button>
                 </h5>
               </div>
@@ -185,7 +189,7 @@
                   <h5 class="mb-0">
                     <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                       data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                      Q: Reis tips
+                      Reis tips
                     </button>
                   </h5>
                 </div>
@@ -206,37 +210,13 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="card-header" id="headingSeven">
-              <h5 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSeven"
-                  aria-expanded="false" aria-controls="collapseSeven">
-                  Q: Hoe laat kan ik inchecken?
-                </button>
-              </h5>
-            </div>
-            <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#faqExample">
-              <div class="card-body">
-                Check-in tijden kunnen variëren per hotel en van regio tot regio. In algemene zin zijn de kamers
-                beschikbaar tussen 12 en 14 uur. Wanneer je eerder aankomt heeft u wel de mogelijkheid om de bagage
-                achter
-                te laten voor enkele uren.
-              </div>
-            </div>
-          </div>
         </div>
       </div>
 </div>
-
+</div>
       <!--/row-->
-
-
   </main>
-
 </body>
-
-
 <!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
 <footer id="faqFooterFix">
   <!-- start topfooter -->
