--- a/Sun Tours-Website/aanmelden.html
+++ b/Sun Tours-Website/aanmelden.html
@@ -13,6 +13,8 @@
   <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
   <script src="Javascript/ajax.js"></script>
   <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap" rel="stylesheet"> 
 </head>
 
 <body class="registreer_body">
