--- a/Sun Tours-Website/index.html
+++ b/Sun Tours-Website/index.html
@@ -12,10 +12,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
   <script src="Javascript/ajax.js"></script>
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap" rel="stylesheet"> 
  
 </head>
-<body>          
+<body class="index_Background">          
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <a href="index.html"><img class="img-fluid" src="images/SunLogo.png" alt="x"
         style="width: 60px;"></a>
@@ -96,7 +98,7 @@
           <div class="col-md-4 text-center">
             <img class="img-fluid p-5 indexPics" src="images/car-rental.png" alt="x">
             <h5>
-              Vervoer
+             <b>Vervoer</b> 
             </h5>
             <p>
               Niet alleen bieden wij hulp bij het kopen van vliegtickets
@@ -108,7 +110,7 @@
         <div class="col-md-4 text-center">
           <a href="../Sun Tours-Website/php/Review.php"><img class="img-fluid p-5 indexPics" src="images/revieuw.jpg" alt="x"></a>
           <h5>
-            Review
+           <b>Review</b> 
           </h5>
           <p>
             Wij vinden uw mening belangrijk. Laat bij ons een review achter. Alvast bedankt!
@@ -118,7 +120,7 @@
         <div class="col-md-4 text-center">
           <a href="assortiment.html"><img class="img-fluid p-5 indexPics" src="images/plane-ticket.png" alt="x"></a>
           <h5>
-            Boekingen
+          <b>Boekingen</b>
           </h5>
           <p>
             Bij ons kunt u ook gemakkelijk uw reis boeken.
@@ -129,7 +131,7 @@
       <div class="col-md-4 text-center">
         <a href="FAQ.html"><img class="img-fluid p-5 indexPics" src="images/faq.png" alt="x"></a>
         <h5>
-          FAQ
+          <b>FAQ</b>
         </h5>
         <p>
           Heeft u een vraag? misschien heeft iemand deze vraag al beantwoord.
@@ -140,7 +142,7 @@
         <div class="col-md-4 text-center">
           <a href="aanmelden.html"><img class="img-fluid p-5 indexPics" src="images/guests-book.png" alt="x"></a>
           <h5>
-            aanmelden
+           <b>Aanmelden</b>
           </h5>
           <p>
             Meld u hier aan. Heeft u nog geen account?
@@ -151,7 +153,7 @@
         <div class="col-md-4 text-center">
           <a href="contact.html"><img class="img-fluid p-5 indexPics" src="images/contact-form.png" alt="x"></a>
           <h5>
-            Contact
+            <b>Contact</b>
           </h5>
           <p>
             Heeft u vragen of zorgen kunt u online contact met ons opnemen.
