--- a/Sun Tours-Website/assortiment.html
+++ b/Sun Tours-Website/assortiment.html
@@ -10,6 +10,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
   <script src="Javascript/ajax.js"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap" rel="stylesheet"> 
   
 </head>
 <body>          
@@ -49,10 +51,6 @@
 </nav>
 
 <main>
-  
-
-
-
     <main role="main">
 
       <section class="jumbotron text-center">
@@ -116,8 +114,6 @@
               </div>
             </div>
 
-
-
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
                 
@@ -173,13 +169,10 @@
 
     </main>
 
-   
-
-  
 
 <svg xmlns="http://www.w3.org/2000/svg" width="208" height="226" viewBox="0 0 208 226" preserveAspectRatio="none" style="display: none; visibility: hidden; position: absolute; top: -100%; left: -100%;"><defs><style type="text/css"></style></defs><text x="0" y="11" style="font-weight:bold;font-size:11pt;font-family:Arial, Helvetica, Open Sans, sans-serif">Thumbnail</text></svg></body>
   
-</main>
+
 
  <footer class="assortiment_footer">
     <!-- start topfooter -->
