--- a/Sun Tours-Website/contact.html
+++ b/Sun Tours-Website/contact.html
@@ -13,7 +13,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
   <script src="Javascript/ajax.js"></script>
-
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap" rel="stylesheet"> 
 </head>
 
 <body class="Contact_Background">
@@ -54,17 +55,9 @@
     <h1>contact</h1><br>
   </div>
   <main>
-    <h2 class="contact_toptext">contact</h2><br>
+ 
     <div class="c-form__progress"></div>
-
-
-
-
     <div class="wrapper Val">
-
-
-
-
       <form method="POST" id="contact">
         <label>Uw naam (verplicht)</label><br>
         <input type="text" class="contactInput" id="contact_naam" name="contact_naam" placeholder="Naam"
@@ -80,7 +73,7 @@
       </form>
 
       <div class="info">
-        <h5>Laat U mening achter!</h5>
+        <h5>Laat Uw mening achter!</h5>
         <p>onze andere klanten geven om ons★★★★☆ ( Beoordelingen)
           Problemen met invullen. Neem contact met ons op en we helpen u graag.</p>
 
