--- a/Sun Tours-Website/FAQ.html
+++ b/Sun Tours-Website/FAQ.html
@@ -17,6 +17,12 @@
       background: #aaa;
     }
   </style>
+    <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+    <script>
+      Weglot.initialize({
+          api_key: 'wg_e0862d6fccddf79b84908b2ed4ee35a62'
+      });
+  </script>
 </head>
 
 <body class="FAQ_Background">
