--- a/Sun Tours-Website/assortiment.html
+++ b/Sun Tours-Website/assortiment.html
@@ -10,7 +10,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
   <script src="Javascript/ajax.js"></script>
-  
+  <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+  <script>
+    Weglot.initialize({
+        api_key: 'wg_e0862d6fccddf79b84908b2ed4ee35a62'
+    });
+</script>
 </head>
 <body>          
 
