--- a/Sun Tours-Website/passwordChange.html
+++ b/Sun Tours-Website/passwordChange.html
@@ -44,7 +44,7 @@
           <a class="nav-link" href="FAQ.html">FAQ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Review.html">Review</a>
+          <a class="nav-link" href="php/Review.php">Review</a>
         </li>
         <li class="nav-item" id='logout_li'>
           <form method="POST" id="logoutForm"  >
