--- a/Sun Tours-Website/FAQ.html
+++ b/Sun Tours-Website/FAQ.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <script src="node_modules/jquery/dist/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
+  <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
   <script src="Javascript/ajax.js"></script>
   <style>
     .fakeimg {
