front end presentatie waardig ultimate edition

--- a/Sun Tours-Website/activatie.html
+++ b/Sun Tours-Website/activatie.html
@@ -22,7 +22,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap" rel="stylesheet"> 
 </head>
 
-<body class="Contact_Background">
+<body class="activatie_Background">
 
 
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -56,7 +56,7 @@
       </ul>
     </div>
   </nav>
-  <div class="header2">
+  <div class="activatieHeader">
     <h1>Account Activatie</h1><br>
   </div>
   <main>
