--- a/Sun Tours-Website/passwordChange.html
+++ b/Sun Tours-Website/passwordChange.html
@@ -18,9 +18,11 @@
         api_key: 'wg_e0862d6fccddf79b84908b2ed4ee35a62'
     });
 </script>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap" rel="stylesheet"> 
 </head>
 
-<body class="Contact_Background">
+<body class="password_Background">
 
 
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -54,9 +56,9 @@
       </ul>
     </div>
   </nav>
-  <div class="header2">
-    <h1>Wachtwoord aanpassen</h1><br>
-  </div>
+  <div class="Passwordheader">
+        <h1>Wachtwoord aanpassen</h1>
+    </div>
   <main>
 
     <div class="c-form__progress"></div>
@@ -71,13 +73,13 @@
 
       <form method="POST" id="changePswrd">
 
-        <label>Uw code:</label><br>
+        <label class="size">Uw code:</label><br>
         <input type="text" class="contactInput" id="secCode" name="secCode" placeholder="Code"><br><br>
-        <label>Uw Nieuwe wachtwoord:</label><br>
+        <label class="size">Uw Nieuwe wachtwoord:</label><br>
         <input type="password" class="contactInput" id="newPswrd" name="newPswrd" placeholder="Wachtwoord"><br><br>
-        <label>Bevestig wachtwoord:</label><br>
+        <label class="size">Bevestig wachtwoord:</label><br>
         <input type="password" class="contactInput" id="confPaswrd" name="confPaswrd" placeholder="Bevestig wachtwoord:"><br><br>
-        <label>Uw e-mail:</label><br>
+        <label class="size">Uw e-mail:</label><br>
         <input type="text" class="contactInput" id="pswrdEmail" name="pswrdEmail" placeholder="E-mail"><br><br>
 
         <input type="submit" class="buttonContact" value="Verander" name="verifyButton" id="verifyButton" class="sendKnop">
@@ -91,7 +93,7 @@
 </body>
 
  <!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
- <footer id="activatieFooter">
+ <footer id="passwordFooter">
     <!-- start topfooter -->
     <div class="topFooter">
       <div class="row">
