footers activatie, contact, ww veranderen gefixed

--- a/Sun Tours-Website/activatie.html
+++ b/Sun Tours-Website/activatie.html
@@ -81,36 +81,33 @@
 </body>
 
  <!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
- <footer id="activatieFooter">
-    <!-- start topfooter -->
-    <div class="topFooter">
-      <div class="row">
-        <div class="col-5 mx-4 mb-1">
-          <a>Suntours</a></br>
-          <a>Bredeweg 235, 6042 GE Roermond</a></br>
-          <a>06-13022010</a></br>
-          <a>088 2365148</a></br>
-        </div>
-        <div class="col-3 mx-3 mt-3">
-          <div class="row mx-1">
-            <a href=""><img class="img-fluid" src="images/facebook.png" alt="x"
-              style="width: 60px;"></a>
-              <a href=""><img class="img-fluid" src="images/twitter.png" alt="x"
-                style="width: 60px;"></a>
-        <div class="mt-1 mx-1">      
-            <a href=""><img class="img-fluid" src="images/youtube.png" alt="x"
-              style="width: 53px;"></a>
+ <footer id="activatieEnContact">
+  <!-- start topfooter -->
+  <div class="topFooter">
+    <div class="row">
+      <div class="col-5 mx-4 mb-1">
+        <a>Suntours</a></br>
+        <a>Bredeweg 235, 6042 GE Roermond</a></br>
+        <a>06-13022010</a></br>
+        <a>088 2365148</a></br>
+      </div>
+      <div class="col-3 mx-3 mt-3">
+        <div class="row mx-1">
+          <a href=""><img class="img-fluid" src="images/facebook.png" alt="x" style="width: 60px;"></a>
+          <a href=""><img class="img-fluid" src="images/twitter.png" alt="x" style="width: 60px;"></a>
+          <div class="mt-1 mx-1">
+            <a href=""><img class="img-fluid" src="images/youtube.png" alt="x" style="width: 53px;"></a>
           </div>
-        </div>
         </div>
       </div>
     </div>
-    <!-- einde topfooter -->
+  </div>
+  <!-- einde topfooter -->
 
-    <!-- start bottom footer -->
-    <div class="bottomFooter">
-      copyright &copy; 2021 <i>Ontworpen door: Thomas-Thomas-Stef-Lucas</i>
-    </div>
-    <!-- bottom footer -->
-  </footer>
+  <!-- start bottom footer -->
+  <div class="bottomFooter">
+    copyright &copy; 2021 <i>Ontworpen door: Thomas-Thomas-Stef-Lucas</i>
+  </div>
+  <!-- bottom footer -->
+</footer>
 </html>
