--- a/Sun Tours-Website/contact.html
+++ b/Sun Tours-Website/contact.html
@@ -63,7 +63,7 @@
   <main>
  
     <div class="c-form__progress"></div>
-    <div class="wrapper Val">
+    <div class="wrapper">
       <form method="POST" id="contact">
         <label>Uw naam (verplicht)</label><br>
         <input type="text" class="contactInput" id="contact_naam" name="contact_naam" placeholder="Naam"
@@ -93,7 +93,7 @@
 
 
 <!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
-<footer>
+<footer id="activatieEnContact">
   <!-- start topfooter -->
   <div class="topFooter">
     <div class="row">
