translation on assortiment page

--- a/Sun Tours-Website/assortimenten/egypte.html
+++ b/Sun Tours-Website/assortimenten/egypte.html
@@ -13,6 +13,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap" rel="stylesheet"> 
+  <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+  <script>
+    Weglot.initialize({
+        api_key: 'wg_e0862d6fccddf79b84908b2ed4ee35a62'
+    });
+</script>
+  
 </head>
 
 <body>
