--- a/Sun Tours-Website/contact.html
+++ b/Sun Tours-Website/contact.html
@@ -75,7 +75,7 @@
         <input type="text" class="contactInput" id="contact_onderwerp" name="contact_onderwerp"
           placeholder="Onderwerp"><br><br>
         <textarea id="contact_text" class="contactArea" name="contact_text" rows="4" cols="50"></textarea><br><br>
-        <input type="submit" class="buttonContact" value="Verzend" name="sendContact"id="contact_button" class="sendKnop">
+        <input type="submit" class="buttonContact" value="Verstuur" name="sendContact"id="contact_button" class="sendKnop">
       </form>
 
       <div class="info">
