Revert "Merge branch 'Work-In-Progress' of https://gitlab.com/sun-tours/sun-tours-website into Work-In-Progress"
This reverts commit 22b025e7979fa87274ef6e37ced1526772793201, reversing
changes made to 57bff7fe5151019a2bf206d211afdaf5e7707fc4.

--- a/Sun Tours-Website/contact.html
+++ b/Sun Tours-Website/contact.html
@@ -63,7 +63,7 @@
   <main>
  
     <div class="c-form__progress"></div>
-    <div class="wrapper">
+    <div class="wrapper Val">
       <form method="POST" id="contact">
         <label>Uw naam (verplicht)</label><br>
         <input type="text" class="contactInput" id="contact_naam" name="contact_naam" placeholder="Naam"
@@ -93,7 +93,7 @@
 
 
 <!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
-<footer id="activatieEnContact">
+<footer>
   <!-- start topfooter -->
   <div class="topFooter">
     <div class="row">
