--- a/Sun Tours-Website/boekingen.html
+++ b/Sun Tours-Website/boekingen.html
@@ -123,7 +123,7 @@
             <label>Aantal auto's:</label><br>
             <input id="aantal_autos" type=number min=1 onchange="update_prices()"></input>
             <br><br><label>Aantal dagen:</label><br>
-            <input id="rental_time_chooser_id" type=number max=8 min=1 name="rentalCarDays" onchange="update_prices()"></input>
+            <input id="rental_time_chooser_id" type=number max=8 min=1 name="rentalCarDays" value="0" onchange="update_prices()"></input>
             
   
             <br><br><br>
@@ -137,7 +137,7 @@
     
           <div id="bus">
             <label>Aantal dagen openbaar vervoer:</label><br>
-            <input type="number" min="0" onchange="update_prices()" id="aantal_Dagen" name="busDays"><Br><Br>
+            <input type="number" min="0" onchange="update_prices()" id="aantal_Dagen" value="0" name="busDays"><Br><Br>
               <label>Aantal tickets:</label><br>
               <input type="number" min="0" onchange="update_prices()" id="aantal_tickets_bus" name="aantal_tickets_bus"><Br><Br>
               <label>geldig vanaf:</label><br>
@@ -146,12 +146,12 @@
   
           </div>
           <input type="text" id="packageID" name="packageID" hidden>
-          <input type="text" id="totalPrice" name="totalPrice" hidden>
-          <input type="text" id="ticketPrice" name="ticketPrice" hidden>
-          <input type="text" id="carAmount" name="carAmount" hidden>
-          <input type="text" id="carPrice" name="carPrice" hidden>
-          <input type="text" id="busTicketAmount" name="busTicketAmount" hidden>
-          <input type="text" id="busPrice" name="busPrice" hidden>
+          <input type="text" id="totalPrice" name="totalPrice" value="0" hidden>
+          <input type="text" id="ticketPrice" name="ticketPrice" value="0" hidden>
+          <input type="text" id="carAmount" name="carAmount" value="0" hidden>
+          <input type="text" id="carPrice" name="carPrice" value="0" hidden>
+          <input type="text" id="busTicketAmount" name="busTicketAmount" value="0" hidden>
+          <input type="text" id="busPrice" name="busPrice" value="0" hidden>
   
           <table id='boekingenTable'>
             <tr>
