--- a/Sun Tours-Website/contact.html
+++ b/Sun Tours-Website/contact.html
@@ -49,6 +49,9 @@
         <li class="nav-item">
           <a class="nav-link" href="php/Review.php">Review</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="php/boekingsGeschiedenis.php">boekingen overzicht</a>
+        </li>
         <li class="nav-item" id='logout_li'>
           <form method="POST" id="logoutForm"  >
             <input type="submit" id="logout" name="logout" value="loguit" class="btn btn-sm btn-outline-secondary">
