--- a/Sun Tours-Website/aanmelden.html
+++ b/Sun Tours-Website/aanmelden.html
@@ -100,6 +100,7 @@
                 <div class="form-group col-md-12"><label for="user" class="label">PostCode</label><input type="text" class="form-control" id="postalCode" name="postalCode" placeholder="Postcode" class="input"></div>
                 <div class="form-group col-md-12"><label for="user" class="label">Telefoonnummer</label><input type="text" class="form-control" id="phonenumber" name="phonenumber" placeholder="0123456789" minlength="10" class="input"></div>
                 <div class="form-group col-md-12"> <label for="user" class="label">Adres</label><input type="text" class="form-control" id="address" name="address" placeholder="Adres" class="input"></div>
+                <div class="form-group col-md-12"> <label for="City" class="label">Stad</label><input type="text" class="form-control" id="address" name="City" placeholder="Stad" class="input"></div>
                 <div class="form-group col-md-12"> <label for="pass" class="label">Wachtwoord</label> <input type="password" class="form-control" id="passwd2" name="passwd2" placeholder="Wachtwoord" class="input"> </div>
               </div>
               <div class="form-row">
