tussen pagina boekingen en account verwijderen front end

--- a/Sun Tours-Website/aanmelden.html
+++ b/Sun Tours-Website/aanmelden.html
@@ -80,6 +80,8 @@
                 </div>
               </div>
               <div class="foot"> <a href="passwordChange.html">Wachtwoord vergeten?</a> </div>
+              <div class="foot"> <a href="Account_Verwijderen.html">Account verwijderen?</a> </div>
+              <div class="foot"> <a href="activatie.html">Account activeren?</a> </div>
               <div class="mt-2 mb-3"> <button class="btn btn-primary full-width sendKnop button" value="Log In" name="sendLogin" id="loginKnop" type="submit">Login</button> </div>
             </form>
 
