--- a/Sun Tours-Website/activatie.html
+++ b/Sun Tours-Website/activatie.html
@@ -67,6 +67,12 @@
 
     <div class="wrapper">
 
+      <form method="POST" id="pswrdSendCode">
+        <label>Uw e-mail:</label><br>
+        <input type="text" class="contactInput" id="codeEmail" name="codeEmail" placeholder="E-mail"><br><br>
+        <input type="submit" class="buttonContact" name="sendCodeButton" id="sendCodeButton" value="Verstuur code" class="sendKnop">
+      </form>
+
       <form method="POST" id="codeVerify">
         <label>Uw code:</label><br>
         <input type="text" class="contactInput" id="activateCode" name="activateCode" placeholder="Code"><br><br>
