--- a/Sun Tours-Website/Account_Verwijderen.html
+++ b/Sun Tours-Website/Account_Verwijderen.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
+
+  <script>function test(){alert('test');}</script>
+
   <script src="node_modules/jquery/dist/jquery.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -82,7 +85,10 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuleren</button>
-              <button type="button" class="btn btn-primary">Verwijderen</button>
+
+              <form method="POST" id="delAcc"  >
+                <button type="submit" class="btn btn-primary" value="verwijder" name='delAcc'>Verwijderen</button>
+              </form>        
             </div>
           </div>
         </div>
